<resources>
    <string name="app_name">Routine</string>
    <string name="timer_ground">00</string>
    <string name="timer_center">:</string>
    <string name="homePageHeading">My Task Lists</string>
    <string name="plusSign">+</string>
    <string name="holder">TextView</string>
    <string name="TO_DO_LIST_Description">Is the icon representing the to-do List</string>
    <string name="to_add_new_icon">To add new icon</string>
    <string name="add_new_list">Add new list</string>
    <string name="title_activity_register">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="background">Background</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="side_navigation_drawer">Side Navigation drawer</string>


    <string name="modify">+ Modify</string>
    <string name="next">Next</string>
    <string name="registerName">What is your name?</string>
    <string name="registerEmail">What is your email?</string>
    <string name="registerPassword">Enter a secure password</string>
    <string name="registerDOB">What is your Date of Birth?</string>
    <string name="empty_text_error">This input is empty</string>
    <string name="addMessage">Add New Card</string>

    <string name="account"><b>Account</b></string>
    <string name="notifications"><b><u>Notifications</u></b></string>
    <string name="general"><b><u>General</u></b></string>
    <string name="StepAdd"><b>Steps</b></string>
    <string name="NotesAdd">Notes</string>
    <string name="FocusButton">Focus</string>
    <string name="NotesHint">Enter notes here...</string>
    <string name="Add">Add</string>
    <string name="EnterStep">Enter Step Name</string>
    <string name="NotificationDescription">Notification Icon</string>
    <string name="ArrowDescription">Arrow Buttons</string>
    <string name="SetNotification"><b>Set a time</b></string>
    <string name="SetTimer">Set Notification</string>
    <string name="SelectDate">Select a date</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="history">History</string>
    <string name="startTimer">Start</string>
    <string name="StopTimer">Give Up</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_focus_history">My Focus History</string>
    <string name="title_focus_achievement">My Achievement</string>
    <string name="logo_description">Routine Logo</string>
    <string name="dateFormat">DD/MM/YYYY</string>
    <string name="back">Back</string>
    <string name="email_text_error">Please ensure you have @ and .com</string>
    <string name="date_text_error">Does not match DD/MM/YYYY Format</string>
    <string name="pwd_strong_error">Password must have 10, a, A and 8 characters</string>
    <string name="continue_txt">Continue</string>
    <string name="ok">Ok</string>
    <string name="FAIL_STATUS">Thanks for giving your best!</string>
    <string name="SUCCESS_STATUS">Yayyyy! You have reach your goal!</string>
    <string name="PROCESS_STATUS">While you are at it, Keep fighting!</string>
    <string name="REST_STATUS">What are you focusing today?</string>
    <string name="FAIL_TIMER">Please enter a valid timer</string>
    <string name="BUTTON_FAIL">Try Again</string>
    <string name="BUTTON_RESTART">Restart</string>
    <string name="BUTTON_START">Start</string>
    <string name="login_title">Login</string>
    <string name="INPUT_TASK">Enter your Task</string>
    <string name="remember_me">Remember Me</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="icon_description">Icon description</string>
    <string name="habit">Habit</string>
    <string name="home">Home</string>

    <string name="profile">Profile</string>
    <string name="more"><b>More</b></string>
    <string name="logout">Logout</string>
    <string name="changeName">Change Name</string>
    <string name="changePassword">Change Password</string>
    <string name="reportAProblem">Report A Problem</string>
    <string name="rateOurApp">Rate Our App</string>
    <string name="tempUsername">Username</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1560805060745865</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1560805060745865</string>
    <string name="error_email_password">Invalid Email or Password</string>
    <string name="error_empty_email">Email cannot be empty</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="register">Register</string>
    <string name="error_name_empty">Name cannot be empty</string>
    <string name="habit_tracker">Habit Tracker</string>
    <string name="habit_divider">/</string>
    <string name="drink_water">Drink water</string>
    <string name="divider">/</string>
    <string name="homeTime">My Task List</string>
    <string name="your_tasklist_is_empty">Your Task List is empty</string>
    <string name="checkListEmpty">Your Check List is empty</string>
    <string name="description_bel">A bell icon</string>
    <string name="description_check">A check icon</string>
    <string name="check_list">Check List</string>
    <string name="focus">Focus</string>
    <string name="description_focus">A focus icon</string>
    <string name="notes">Notes</string>
    <string name="description_notes">A notes icon</string>
    <string name="description_edit">A edit icon</string>
    <string name="select_a_tool_to_get_started">Select a tool to get started</string>
    <string name="down_arrow">Down arrow</string>
    <string name="schedule">Schedule</string>
    <string name="my_habits">My Habits</string>
    <string name="habit_remind_text">You still have 3 habits to do today</string>
    <string name="habit_one">1</string>
    <string name="your_habitlist_is_empty">Your habitList is empty</string>
    <string name="add_your_first_habit">Add your first habit</string>
    <string name="Datenotset">Date: Not Set Yet</string>
    <string name="Timenotset">Time: Not Set Yet</string>
    <string name="SetReminder">Set Reminder!</string>
    <string name="calender">Calender</string>
    <string name="my_calender">My Calender</string>
    <string name="task">Task</string>
    <string name="noTime">No Time</string>
    <string name="current_streak">Current Streak</string>
    <string name="day">day</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="chart_left">chart_left</string>
    <string name="chart_right">chart_right</string>
    <string name="_20">20</string>
    <string name="calender_dot">Have event</string>
    <string name="shared_with">Shared with people </string>
    <string name="add_people">Add people</string>
    <string name="arrow_pointing_down">Arrow pointing down</string>
    <string name="team_no_internet">To access the team feature please connect to the internet.</string>
    <string name="edit_task_list">Edit Task List</string>
    <string name="teams">Teams</string>
    <string name="submit">Submit</string>
    <string name="rubbish_bin">Rubbish Bin</string>
    <string name="unknown">Unknown</string>
    <string name="storage_permission_needed">Storage Permission Needed</string>
    <string name="storage_permission_description">In order for the resource to load, we will need storage permission</string>
    <string name="send_again">Send Again</string>
    <string name="reset_password"><u>Reset Password</u></string>
    <string name="send">Send</string>


</resources>

