<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/focus_image_background"
    >


    <ImageView
        android:id="@+id/backgroud"
        android:layout_width="0dp"
        android:layout_height="178dp"

        android:clickable="false"
        android:descendantFocusability="blocksDescendants"


        android:focusable="false"
        android:focusableInTouchMode="false"



        android:translationZ="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/background" />

    <ImageView
        android:id="@+id/todoIcon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/amazon"

        android:layout_marginTop="16dp"
        android:translationZ="100dp"

        android:contentDescription="@string/TO_DO_LIST_Description"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroud"
        />

    <TextView
        android:id="@+id/listName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"
        android:text="@string/holder"
        android:textColor="@color/black"

        android:textSize="18sp"
        android:translationZ="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/todoIcon"
        app:layout_constraintStart_toStartOf="@+id/todoIcon"
        app:layout_constraintTop_toBottomOf="@+id/todoIcon"
        app:layout_constraintVertical_bias="0.01999998" />


</androidx.constraintlayout.widget.ConstraintLayout>